welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:21: error: ';' expected but 'def' found.
			leveBrosse } def faireV3(){
                                     ^