welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
	faireV(c:color)

	def faireV(){ for( n <-1 to 4){ 
		avance() 
		marquersol() 
		avance() 
		gauche() 
		avance() 
		marquersol() 
		recule() 
		droite() 
		avance() 
		marquersol() 
		avance() gauche() 
		} 
		} 
		
		def marquersol(){
			baisseBrosse() 
			leveBrosse } def faireV3(){
				for( n <- 1 to 3 ){ faireV() 
				for ( n <- 1 to 5){avance()
				} 
				} 
				}
				for( n <-1 to 3){ 
					faireV3() gauche() 
					for ( n <- 1 to 5){ 
						avance() } droite() }
}
